<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TwitterClient</string>
    <string name="action_settings">Settings</string>
    <string name="ivProfile">Profile</string>
    <string name="reply">reply »</string>
    <string name="reply_text">reply</string>
    <string name="retweet_text">retweet</string>
    <string name="favorite_text">favorite</string>
    <string name="share_text">share</string>
    <string name="action_composetweet">compose</string>
    <string name="whats_happening">What\'s happening?</string>
    <string name="miSearchTitle">search</string>
    <string name="miTweet">TWEET</string>
    <string name="miCharacterCount">140</string>
    <string name="title_activity_compose_tweet"></string>
    <string name="title_activity_tweet_detail"></string>
    <string name="tvRetweets"> RETWEETS</string>
    <string name="tvFavourites"> FAVORITES</string>
    <string name="tvWelcomeMessage">Hello. Welcome to Twitter Client.</string>
    <string name="btnLogin">Sign In</string>
    <string name="ivLogo">Twitter logo</string>
    <string name="home">Home</string>
    <string name="mentions">Mentions</string>
    <string name="profile">Profile</string>
    <string name="tvTweets">TWEETS</string>
    <string name="tvFollowing">FOLLOWING</string>
    <string name="tvFollowers">FOLLOWERS</string>
    <string name="title_activity_profile_tweets">ProfileTweetsActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="tvViewAllTweets">View all Tweets</string>
    <string name="tweets_label">Tweets</string>
    <string name="title_activity_related_users">RelatedUsersActivity</string>
    <string name="etSearchHint">Search Twitter</string>
    <string name="network_error">Unable to connect to internet.</string>
    <string name="btnClose">Close</string>

</resources>
